[package]
name = "ledger-namada-rs"
description = "Library to integrate with the Ledger Namada app"
version = "0.0.1"
license = "Apache-2.0"
authors = ["Zondax AG <info@zondax.ch>"]
homepage = "https://github.com/ZondaX/ledger-namada"
repository = "https://github.com/ZondaX/ledger-namada"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "apdu", "namada"]
edition     = "2018"
autobenches = false

[lib]
name = "ledger_namada_rs"

[dependencies]
ledger-transport = "0.10.0"
ledger-zondax-generic = "0.10.0"

thiserror = "1.0.30"

byteorder = "1.4.3"

prost = "0.11.5"
prost-types = "0.11.6"

leb128 = "0.2.5"
sha2 = "0.10.6"
ed25519-dalek = "1.0.1"
bincode = "1.3.3"

[dev-dependencies]
hex = "0.4.3"
once_cell = "1.10.0"

tokio = { version = "1", features = ["full"] }
ledger-transport-hid = "0.10.0"
serial_test = "0.10.0"

[profile.release]
overflow-checks = true
